remove CartModel.swift and ListModel.swift files
