# shoppeStore/shoppeStore/Models/HomeModel.swift
@@ -10,9 +10,6 @@ import Foundation
 struct HomeProduct:Codable{
     let status:String
     let data:[Product]
-    
-    
-    
 }
 
 struct Product:Codable,Identifiable{
@@ -38,3 +35,42 @@ let categories = [
     Category(name: "Bags", count: 87, images: ["bagProduct1", "bagProduct2", "bagProduct3", "bagProduct1"]),
     Category(name: "Lingerie", count: 218, images: ["clothingProduct1", "shoesProduct4", "bagProduct2", "clothingProduct1"])
 ]
+//
+//wishList screen
+struct WishListdata: Decodable {
+    let status: String
+    let data: [wishListProduct]?
+}
+
+struct wishListProduct: Identifiable, Decodable {
+    let id: String
+    let productID: String
+    let name: String
+    let price: Double
+    let image: String
+    
+    enum CodingKeys: String, CodingKey {
+        case id
+        case productID
+        case name
+        case price = "Price"
+        case image
+    }
+}
+
+//cart screen
+struct CartData: Decodable{
+    let status: String
+    let totalPrice: Double
+    let data: [CartListProduct]?
+}
+
+struct CartListProduct: Identifiable, Decodable {
+    let id: String
+    let productID: String
+    let name: String
+    let image: String
+    var quantity: Int
+    var price: Double
+    var totalPrice: Double
+}
